--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Homeworks</title>
   </head>
 
   <body>
-    <ol>
-      <li value="5"><a href="./Homeworks/hw 5/index.html">Homework 5</a></li>
+    <ul>
+      <li><a href="./Homeworks/hw 5/index.html">Homework 5</a></li>
       <li><a href="./Homeworks/hw 6/index.html">Homework 6</a></li>
-    </ol>
+      <li></li>
+      <li><a href="./2nd exam/index.html">Exam 2</a></li>
+    </ul>
   </body>
 </html>
